# war_with_gods

./: CMakeLists.txt  README.md
docs/: CONVENTIONS.md  ENGINE.md  GAME.md
src/: main.cpp
src/engine/ecs/: manager.cpp  system.cpp
src/engine/ecs/include/: component.h  entity.h  manager.h  system.h
tests/test_engine/test_ecs/: test_component.cpp  test_system.cpp
